--- a/stylesheets/lib/mediaqueries.scss
+++ b/stylesheets/lib/mediaqueries.scss
@@ -8,8 +8,55 @@ Media queries for common devices
 /* iPad [portrait + landscape] */
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+	body{
+		
+	}
 }
 
 /* iPhone [portrait + landscape] */
-@media only screen and (max-device-width: 480px) {
+@media screen and (max-width: 480px) {
+	
+	$deviceWidth: 420px;
+	#container {
+		width: 420px;
+		padding: 20px;
+	}
+
+	.col {
+		display: block;
+		margin: 0;
+		clear: both;
+	}
+
+	.whole {
+		width: $deviceWidth;
+		margin-right: 0;
+	}
+	.half {
+		width: $deviceWidth;
+	}
+	.third {
+		width: $deviceWidth;
+	}
+	.fourth {
+		width: $deviceWidth;
+	}
+	.fifth {
+		width: $deviceWidth;
+	}
+	.sixth {
+		width: $deviceWidth;
+	}
+
+
+}
+
+/*	iPhone4 retina display media query.
+-----------------------------------------------    */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+		
+	body{
+		
+	}
 }
