--- a/stylesheets/typography.scss
+++ b/stylesheets/typography.scss
@@ -4,27 +4,23 @@ TYPOGRAPHY CSS
 
 -------------------------------------------------------------- */
 
-/* Declare your base font families here */
-$serif1: "Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua", Georgia, serif;
-$sans1: "Gill sans", "Myriad Pro", Myriad, Helvetica, Arial, sans-serif;
-
-body {
-	font-size: 14px;
-	line-height: 20px;
-	color: #333;
-}
-
 /* Default fonts and colors. */
 body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea {
-	font-family: $sans1;
+	font-size: $fontSize;
+	line-height: $baseLine;
+	font-family: $fontFamily;
+	color: $mainColor;
 }
 
-/* Headings
+/* --------------------------------------------------------------
+
+Headings
+
 -------------------------------------------------------------- */
 
 h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-bottom: $baseLine;
 }
 
 h1 {
@@ -53,14 +49,17 @@ h6 {
 }
 
 
-/* Text elements
+/* --------------------------------------------------------------
+
+Page Elements
+
 -------------------------------------------------------------- */
 
 p {
-	margin-bottom: 10px;
+	margin-bottom: $baseLine;
 }
 ul, ol {
-	margin-bottom: 20px;
+	margin-bottom: $baseLine;
 }
 ul {
 	list-style-type: circle;
@@ -95,7 +94,7 @@ del {
 }
 
 a {
-	color: #1c7fc4;
+	color: $linkColor;
 	text-decoration: none;
 }
 a:hover {
@@ -129,19 +128,20 @@ tt {
 
 q {
 	font-style: italic;
-	font-family: $serif1;
 	font-size: 18px;
 	font-weight: bold;
 }
 cite {
 	display: block;
 	font-weight: bold;
-	font-family: $sans1;
 	margin:10px 0;
 }
 
 
-/* Images
+/* --------------------------------------------------------------
+
+Images
+
 -------------------------------------------------------------- */
 
 img {
