--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,7 @@
 /* --------------------------------------------------------------
 
+GRAVITY FRAMEWORK
+
 STYLE SCSS
 Author:
 Date:
@@ -203,14 +205,14 @@ ol {
   list-style-type: decimal; }
 
 li {
-  margin-bottom: 5px; }
+  margin-bottom: 10px; }
 
 dl {
-  margin-bottom: 10px; }
+  margin-bottom: 20px; }
 
 dl dt {
   font-weight: bold;
-  margin-bottom: 10px; }
+  margin-bottom: 20px; }
 
 dl dd {
   margin-bottom: 10px; }
@@ -250,18 +252,15 @@ pre, code, tt {
 
 tt {
   display: block;
-  margin: 10px 0;
   line-height: 1.5; }
 
 q {
   font-style: italic;
-  font-size: 18px;
   font-weight: bold; }
 
 cite {
   display: block;
-  font-weight: bold;
-  margin: 10px 0; }
+  font-weight: bold; }
 
 /* --------------------------------------------------------------
 
@@ -373,35 +372,7 @@ Media queries for common devices
 /* iPad [portrait + landscape] */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {}
 /* iPhone [portrait + landscape] */
-@media screen and (max-width: 480px) {
-  #container {
-    width: 420px;
-    padding: 20px; }
-
-  .col {
-    display: block;
-    margin: 0;
-    clear: both; }
-
-  .whole {
-    width: 420px;
-    margin-right: 0; }
-
-  .half {
-    width: 420px; }
-
-  .third {
-    width: 420px; }
-
-  .fourth {
-    width: 420px; }
-
-  .fifth {
-    width: 420px; }
-
-  .sixth {
-    width: 420px; } }
-
+@media screen and (max-width: 480px) {}
 /*	iPhone4 retina display media query.
 -----------------------------------------------    */
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {}
