--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,8 @@
 /* --------------------------------------------------------------
 
 GRAVITY FRAMEWORK
+www.owainlewis.com
+version 1.0 
 
 STYLE SCSS
 Author:
@@ -102,9 +104,55 @@ button, input, select, textarea {
 
 /* --------------------------------------------------------------
 
-CSS3 Mixins for SASS
+CSS3 MIXINS
+
+Example of how to use the css3 mixins
+
+div{
+	@include rounded (10px);
+	@include gradient(#333,#111);
+}
 
 -------------------------------------------------------------- */
+/* --------------------------------------------------------------
+
+USER INTERFACE
+
+-------------------------------------------------------------- */
+/*
+
+Button Colors
+
+*/
+.button {
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background-color: gray;
+  background-image: -moz-linear-gradient(top, gray, #333333);
+  /* FF3.6 */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, gray), color-stop(1, #333333));
+  /* Saf4+, Chrome */
+  background-image: linear-gradient(top, gray, #333333);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='$baseColor', EndColorStr='$toColor');
+  /* IE */
+  cursor: pointer;
+  color: #FFF;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+  padding: 10px 20px;
+  margin: 0 0 20px 0; }
+  .button:hover {
+    background-color: #999999;
+    background-image: -moz-linear-gradient(top, #999999, #4d4d4d);
+    /* FF3.6 */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #999999), color-stop(1, #4d4d4d));
+    /* Saf4+, Chrome */
+    background-image: linear-gradient(top, #999999, #4d4d4d);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='$baseColor', EndColorStr='$toColor');
+    /* IE */ }
+
 /* --------------------------------------------------------------
 
 TABLES
@@ -143,19 +191,19 @@ All content will inherit from these.
 -------------------------------------------------------------- */
 /* --------------------------------------------------------------
 
-TYPOGRAPHY CSS
+TYPOGRAPHY
 
 -------------------------------------------------------------- */
 /* Default fonts and colors. */
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
   font-size: 14px;
   line-height: 20px;
-  font-family: "Gill sans", "Myriad Pro", Myriad, Helvetica, Arial, sans-serif;
+  font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;
   color: black; }
 
 /* --------------------------------------------------------------
 
-Headings
+HEADINGS
 
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
@@ -188,7 +236,7 @@ h6 {
 
 /* --------------------------------------------------------------
 
-Page Elements
+PAGE ELEMENTS
 
 -------------------------------------------------------------- */
 p {
@@ -228,10 +276,12 @@ del {
 
 a {
   color: #1c7fc4;
-  text-decoration: none; }
+  text-decoration: none;
+  /* Force a hand pointer for all links */
+  cursor: pointer; }
 
 a:hover {
-  text-decoration: underline; }
+  text-decoration: none; }
 
 strong {
   font-weight: bold; }
@@ -264,7 +314,7 @@ cite {
 
 /* --------------------------------------------------------------
 
-Images
+IMAGES
 
 -------------------------------------------------------------- */
 img {
@@ -272,9 +322,25 @@ img {
 
 /* --------------------------------------------------------------
 
-General Classes
+GENERAL CLASSES
 
 -------------------------------------------------------------- */
+.small {
+  width: 96px; }
+
+.medium {
+  width: 160px; }
+
+.large {
+  width: 480px; }
+
+.full {
+  width: 960px; }
+
+.wrap {
+  width: 960px;
+  margin: 0 auto; }
+
 .clear {
   clear: both; }
 
@@ -311,12 +377,11 @@ HTML5
 section {
   margin-bottom: 20px;
   overflow: hidden;
-  border-bottom: 1px solid #CCC;
   padding-bottom: 10px; }
 
 /* --------------------------------------------------------------
 
-Layout
+LAYOUT
 
 -------------------------------------------------------------- */
 body {
@@ -329,7 +394,7 @@ body {
 
 /* --------------------------------------------------------------
 
-Columns
+COLUMNS
 
 -------------------------------------------------------------- */
 .col {
@@ -360,13 +425,36 @@ Columns
 
 /* --------------------------------------------------------------
 
-Media Query Import
+FORMS 
 
 -------------------------------------------------------------- */
+*::-moz-focus-inner {
+  border: 0 none;
+  padding: 0; }
+
+form legend {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 20px; }
+
+input, textarea {
+  padding: 5px;
+  display: block;
+  margin-bottom: 20px;
+  margin-left: 2px;
+  border: 1px solid #cccccc; }
+
+textarea {
+  resize: none;
+  min-height: 200px; }
+
+button:focus, button:active, input:focus, input:active, select:focus, select:active, textarea:focus, textarea:active {
+  box-shadow: 0 0 4px #0066FF;
+  z-index: 1; }
+
 /* --------------------------------------------------------------
 
 MEDIA QUERIES
-Media queries for common devices
 
 -------------------------------------------------------------- */
 /* iPad [portrait + landscape] */
