updated the structure and done some tidying

--- a/stylesheets/lib/typography.scss
+++ b/stylesheets/lib/typography.scss
@@ -77,7 +77,7 @@ dl {
 }
 dl dt {
 	font-weight: bold;
-	margin-bottom: $baseLine;
+	margin-bottom: $baseLine/2;
 }
 dl dd {
 	margin-bottom: $baseLine/2;
