--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -1,123 +1,10 @@
-/* --------------------------------------------------------------
-
-GRAVITY FRAMEWORK
-www.owainlewis.com
-version 1.0 
-
-STYLE SCSS
-Author:
-Date:
-Author_URL:
-
--------------------------------------------------------------- */
-
-@import "reset";
-@import "lib/css3";
-@import "lib/user_interface";
-@import "lib/tables";
+@import "lib/core";
 
 /* --------------------------------------------------------------
 
-Core Variables.
-Here you can declare the core variables for your project.
-All content will inherit from these.
+STRUCTURE
 
 -------------------------------------------------------------- */
-
-$width: 960px;
-$gutterWidth: 20px;
-
-//Fonts
-
-$fontFamily: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;
-$fontSize: 14px;
-$baseLine: 20px;
-
-//Colors
-
-$backgroundColor: #FFF;
-$textColor: #000;
-$linkColor: #1c7fc4;
-$border:#CCC;
-
-@import "typography";
-
-/* --------------------------------------------------------------
-
-GENERAL CLASSES
-
--------------------------------------------------------------- */
-
-.small {
-	width: $width/10;
-}
-
-.medium {
-	width: $width/6;
-}
-
-.large {
-	width: $width/2;
-}
-
-.full {
-	width: $width;
-}
-
-.wrap {
-	width: $width;
-	margin: 0 auto;
-}
-.clear {
-	clear: both;
-}
-.center {
-	text-align: center;
-}
-.uppercase {
-	text-transform: uppercase;
-}
-.titlecase {
-	text-transform: capitalize;
-}
-/* Hide visually and from screenreaders, but maintain layout */
-.invisible {
-	visibility: hidden;
-}
-.clearfix:before, .clearfix:after {
-	content: "\0020";
-	display: block;
-	height: 0;
-	overflow: hidden;
-}
-.clearfix:after {
-	clear: both;
-}
-.clearfix {
-	zoom: 1;
-}
-
-/* --------------------------------------------------------------
-
-HTML5
-
--------------------------------------------------------------- */
-
-section {
-	margin-bottom: $baseLine;
-	overflow: hidden;
-	padding-bottom: $baseLine/2;
-}
-
-/* --------------------------------------------------------------
-
-LAYOUT
-
--------------------------------------------------------------- */
-
-body {
-	background: $backgroundColor;
-}
 
 #container {
 	width: $width;
@@ -125,42 +12,5 @@ body {
 	overflow: hidden;
 }
 
-/* --------------------------------------------------------------
 
-COLUMNS
-
--------------------------------------------------------------- */
-
-.col {
-	margin-right: $gutterWidth;
-	float: left
-}
-
-//This will break in IE < 9 so add .last to your columns if that's an issue
-.col:last-child {
-	margin-right: 0;
-}
-
-.whole {
-	width: $width;
-	margin-right: 0;
-}
-.half {
-	width: ($width - (1 * $gutterWidth)) / 2;
-}
-.third {
-	width: ($width - (2 * $gutterWidth)) / 3;
-}
-.fourth {
-	width: ($width - (3 * $gutterWidth)) / 4;
-}
-.fifth {
-	width: ($width - (4 * $gutterWidth)) / 5;
-}
-.sixth {
-	width: ($width - (5 * $gutterWidth)) / 6;
-}
-
-@import "lib/forms";
-@import "lib/media_queries";
 
