--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -108,9 +108,9 @@ CSS3 MIXINS
 
 Example of how to use the css3 mixins
 
-div{
-	@include rounded (10px);
-	@include gradient(#333,#111);
+div {
+@include rounded (10px);
+@include gradient(#333,#111);
 }
 
 -------------------------------------------------------------- */
@@ -260,7 +260,7 @@ dl {
 
 dl dt {
   font-weight: bold;
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
 
 dl dd {
   margin-bottom: 10px; }
@@ -381,19 +381,6 @@ section {
 
 /* --------------------------------------------------------------
 
-LAYOUT
-
--------------------------------------------------------------- */
-body {
-  background: white; }
-
-#container {
-  width: 960px;
-  margin: 40px auto;
-  overflow: hidden; }
-
-/* --------------------------------------------------------------
-
 COLUMNS
 
 -------------------------------------------------------------- */
@@ -454,13 +441,10 @@ button:focus, button:active, input:focus, input:active, select:focus, select:act
 
 /* --------------------------------------------------------------
 
-MEDIA QUERIES
+STRUCTURE
 
 -------------------------------------------------------------- */
-/* iPad [portrait + landscape] */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {}
-/* iPhone [portrait + landscape] */
-@media screen and (max-width: 480px) {}
-/*	iPhone4 retina display media query.
------------------------------------------------    */
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {}
+#container {
+  width: 960px;
+  margin: 40px auto;
+  overflow: hidden; }
