a big re-write of the core engine

--- a/stylesheets/lib/_functions.scss
+++ b/stylesheets/lib/_functions.scss
@@ -1,15 +1,6 @@
-@import "lib/_core";
-
 /* --------------------------------------------------------------
 
-STRUCTURE
+FUNCTIONS
 
 -------------------------------------------------------------- */
-
-#container {
-	width: $grid-width;
-	margin: 40px auto;
-	overflow: hidden;
-}
-
 
