--- a/stylesheets/lib/_core.scss
+++ b/stylesheets/lib/_core.scss
@@ -1,23 +1,9 @@
-/* --------------------------------------------------------------
-
-GRAVITY FRAMEWORK
-www.owainlewis.com
-version 1.1 
-
-STYLE SCSS
-Author:
-Date:
-Author_URL:
-
--------------------------------------------------------------- */
-
 @import "_reset";
-@import "_mixins";
-@import "_user_interface";
-@import "_tables";
-@import "_settings";
+@import "helpers/_mixins";
+@import "helpers/_tables";
 @import "_typography";
-@import "_classes";
-@import "_functions";
+@import "helpers/_classes";
+@import "helpers/_functions";
 @import "_grid";
-@import "_forms";
+@import "helpers/_forms";
+@import "helpers/_buttons";
