--- a/examples/examples.css
+++ b/examples/examples.css
@@ -137,7 +137,7 @@ TYPOGRAPHY
 /* Default fonts and colors. */
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
   line-height: 1.5;
-  font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
+  font-family: "Myriad Pro", Frutiger, Univers, Helvetica, Arial, sans-serif;
   color: black;
   font-size: 14px; }
 
@@ -148,7 +148,7 @@ HEADINGS
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5 {
   font-weight: bold;
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
 
 h1 {
   font-size: 30px; }
@@ -379,21 +379,43 @@ form legend {
   display: block;
   margin-bottom: 20px; }
 
-input, textarea {
+input[type='text'] {
   padding: 5px;
   display: block;
   margin-bottom: 20px;
   margin-left: 2px;
-  border: 1px solid #cccccc; }
+  border: 1px solid #cccccc;
+  width: 98%; }
+
+input[type="submit"] {
+  background: #333333;
+  width: 150px;
+  padding: 9px;
+  letter-spacing: 1px;
+  border: none;
+  color: white;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -webkit-appearance: none;
+  margin-bottom: 20px; }
+  input[type="submit"]:hover {
+    background: #404040; }
 
 textarea {
   resize: none;
-  min-height: 200px; }
+  min-height: 200px;
+  padding: 5px;
+  display: block;
+  margin-bottom: 20px;
+  margin-left: 2px;
+  border: 1px solid #cccccc;
+  width: 98%; }
 
 button:focus, button:active, input:focus, input:active, select:focus, select:active, textarea:focus, textarea:active {
-  -moz-box-shadow: 0 0 4px #0066ff;
-  -webkit-box-shadow: 0 0 4px #0066ff;
-  box-shadow: 0 0 4px #0066ff;
+  -moz-box-shadow: 0 0 2px #0066ff;
+  -webkit-box-shadow: 0 0 2px #0066ff;
+  box-shadow: 0 0 2px #0066ff;
   z-index: 1; }
 
 /* --------------------------------------------------------------
@@ -410,3 +432,32 @@ Main CSS
 section {
   margin-bottom: 20px;
   overflow: hidden; }
+
+.button {
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background-color: gray;
+  background-image: -moz-linear-gradient(top, gray, #333333);
+  /* FF3.6 */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, gray), color-stop(1, #333333));
+  /* Saf4+, Chrome */
+  background-image: linear-gradient(top, gray, #333333);
+  cursor: pointer;
+  font-weight: bold;
+  color: white;
+  display: block;
+  text-align: center;
+  padding: 10px 20px;
+  margin: 0 0 20px 0;
+  width: 300px; }
+  .button:hover {
+    background-color: #999999;
+    background-image: -moz-linear-gradient(top, #999999, #4d4d4d);
+    /* FF3.6 */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #999999), color-stop(1, #4d4d4d));
+    /* Saf4+, Chrome */
+    background-image: linear-gradient(top, #999999, #4d4d4d); }
+
+h1, h2, p {
+  font-family: "Bookman Old Style", Bookman, "URW Bookman L", "Palatino Linotype", serif; }
