--- a/stylesheets/lib/helpers/_classes.scss
+++ b/stylesheets/lib/helpers/_classes.scss
@@ -4,24 +4,8 @@ GENERAL CLASSES
 
 -------------------------------------------------------------- */
 
-.small {
-	width: $grid-width/10;
-}
-
-.medium {
-	width: $grid-width/6;
-}
-
-.large {
-	width: $grid-width/2;
-}
-
-.full {
-	width: $grid-width;
-}
-
 .wrap {
-	width: $grid-width;
+	width: $width;
 	margin: 0 auto;
 }
 .clear {
@@ -36,7 +20,6 @@ GENERAL CLASSES
 .titlecase {
 	text-transform: capitalize;
 }
-/* Hide visually and from screenreaders, but maintain layout */
 .invisible {
 	visibility: hidden;
 }
