--- a/stylesheets/lib/helpers/_mixins.scss
+++ b/stylesheets/lib/helpers/_mixins.scss
@@ -1,9 +1,3 @@
-/* --------------------------------------------------------------
-
-CORE MIXINS
-
--------------------------------------------------------------- */
-
 @mixin clearfix {
   display: inline-block;
   &:after {
@@ -15,19 +9,6 @@ CORE MIXINS
   }
   * html & { height: 1px }
 }
-
-/* --------------------------------------------------------------
-
-CSS3 MIXINS
-
-Example of how to use the css3 mixins
-
-div {
-@include rounded (10px);
-@include gradient(#333,#111);
-}
-
--------------------------------------------------------------- */
 
 @mixin rounded($radius: 10px) {
 	border-radius: $radius;
@@ -51,9 +32,9 @@ div {
 }
 
 @mixin shadow( $off-y, $off-x, $blur, $color) {
-	-moz-box-shadow: $off-y $off-x $blur $color; /* FF3.5+ */
-	-webkit-box-shadow: $off-y $off-x $blur $color; /* Saf3.0+, Chrome */
-	box-shadow: $off-y $off-x $blur $color; /* Opera 10.5, IE9 */
+	-moz-box-shadow: $off-y $off-x $blur $color;
+	-webkit-box-shadow: $off-y $off-x $blur $color; 
+	box-shadow: $off-y $off-x $blur $color;
 }
 
 @mixin gradient($baseColor, $toColor) {
@@ -61,7 +42,6 @@ div {
 	background-image: -moz-linear-gradient(top, $baseColor, $toColor); /* FF3.6 */
 	background-image: -webkit-gradient(linear,left top,left bottom, color-stop(0, $baseColor),color-stop(1, $toColor)); /* Saf4+, Chrome */
 	background-image: linear-gradient(top,$baseColor, $toColor);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr=$baseColor, EndColorStr=$toColor); /* IE */
 }
 
 @mixin trasition($property, $duration:0.3s, $function: ease-out) {
