fixed some css bugs

--- a/stylesheets/lib/_settings.scss
+++ b/stylesheets/lib/_settings.scss
@@ -13,6 +13,7 @@ Gravityframework.com
 Version 1.2 
 Developed by: Owain Lewis
 License: MIT
+http://www.opensource.org/licenses/mit-license.php
 
 -------------------------------------------------------------- */
 
@@ -25,9 +26,10 @@ $baseline: 20px;
 
 //Fonts
 
-$sans: "Myriad Pro", Frutiger, Univers, Helvetica, Arial, sans-serif;
+$sans: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif: 'Bookman Old Style',Bookman,'URW Bookman L','Palatino Linotype',serif;
 $mono: "Lucida Console", "Andale Mono", "monotype.com", "Bitstream Vera Sans Mono", monospace;
+
 $font-size: 14px;
 
 //Website Colors
