--- a/stylesheets/lib/helpers/_buttons.scss
+++ b/stylesheets/lib/helpers/_buttons.scss
@@ -5,6 +5,7 @@
 	font-weight: bold;
 	color:$text_color;
 	display: block;
+	border: 1px solid darken($color, 10%);
 	text-align: center;
 	padding: 10px 20px;
 	margin: 0 0 20px 0;
