--- a/stylesheets/lib/helpers/_forms.scss
+++ b/stylesheets/lib/helpers/_forms.scss
@@ -1,64 +1,222 @@
 /* --------------------------------------------------------------
 
-FORMS 
+Form Settings. 
+Most of this is inspired by the awesome work of Nathan Smith and formalize css!
 
 -------------------------------------------------------------- */
 
-*::-moz-focus-inner {
-	border: 0 none;
+$formPadding: 5px;
+
+::-moz-focus-inner {
+	border: 0;
 	padding: 0;
 }
 
+input[type="search"]::-webkit-search-decoration {
+	display: none;
+}
 
 form {
-
-	legend {
-		font-weight: bold;
-		display: block;
-		margin-bottom: $baseline;
-	}
-
+	margin-bottom: $baseline;
+}
+fieldset {
+	margin-bottom: $baseline;
 }
 
-@mixin input(){
-	padding: 5px;
-	display: block;
-	margin-bottom: 20px;
-	margin-left: 2px;
-	border: 1px solid $borders;	
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus {
+	border: 1px solid #aaa;
+	color: #444;
+	@include shadow(0px, 0, 2px, #06f);
 }
-
-input[type='text'] {
-	@include input();
-	width:98%;
-}
-
-input[type="submit"] {
-    background: lighten($black,20%);
-    width: 150px;
-    padding: 9px;
-    letter-spacing: 1px;
-    border: none;
-    color: $white;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -webkit-appearance: none;
-	margin-bottom:$baseline;
-	
-	&:hover{
-		background: lighten($black,25%);
-	}
-}
-
 textarea {
+	min-height: 100px;
 	resize: none;
-	min-height: 200px;
-	@include input();
-	width:98%;
+	overflow: auto;
+    width: 100%;
+}
+label,
+legend {
+	display: block;
+	font-weight: bold;
+	font-size: 13px;
+}
+select {
+	width: 100%;
+}
+input[type="checkbox"] {
+	display: inline;
+}
+label span,
+legend span {
+	font-weight: normal;
+	font-size: 13px;
+	color: #444;
 }
 
-button:focus, button:active, input:focus, input:active, select:focus, select:active, textarea:focus, textarea:active {
-	@include shadow (0,0,2px,#0066FF);
-	z-index: 1;
+input,
+button,
+select,
+textarea {
+	vertical-align: middle;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+	position: relative;
+	vertical-align: top;
+	top: 3px;
+	/* IE8, IE9, IE10 */
+	top: 0\0;
+	/* IE7 */
+	*top: -3px;
+	margin-right: 5px;
+}
+
+/* iPad */
+@media (-webkit-min-device-pixel-ratio: 1) and (max-device-width: 1024px) {
+	input[type="radio"],
+	input[type="checkbox"] {
+		vertical-align: baseline;
+		top: 2px;
+	}
+
+}
+
+/* iPhone 3 */
+@media (-webkit-min-device-pixel-ratio: 1) and (max-device-width: 480px) {
+	input[type="radio"],
+	input[type="checkbox"] {
+		vertical-align: baseline;
+		top: 0;
+	}
+
+}
+
+/* iPhone 4 */
+@media (-webkit-min-device-pixel-ratio: 2) and (max-device-width: 480px) {
+	input[type="radio"],
+	input[type="checkbox"] {
+		vertical-align: baseline;
+		top: 0;
+	}
+
+}
+
+textarea,
+select,
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"] {
+		-webkit-appearance: none;
+		-moz-border-radius: 0;
+		-webkit-border-radius: 0;
+		border-radius: 0;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		-moz-background-clip: padding;
+		-webkit-background-clip: padding;
+		background-clip: padding-box;
+		border: 1px solid $borders;
+		border-color: $borders $borders $borders;
+		color: $black;
+		padding: $formPadding;
+		outline: none;
+		@include rounded(2px);
+		font: 12px $sans;
+		margin: 0 0 20px 0;
+		width: 100%;
+		display: block;
+		@include gradient(#fafafa,#fff);
+	
+		/* IE7 */
+		*padding-top: 2px;
+		*padding-bottom: 1px;
+		*height: auto;
+}
+
+/*
+Separate rule for Firefox.
+Separate rule for IE, too.
+Cannot stack with WebKit's.
+*/
+::-webkit-input-placeholder {
+	color: $black;
+}
+
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+	color: $black;
+}
+
+:invalid {
+/*
+Suppress red glow that Firefox
+adds to form fields by default,
+even when user is still typing.
+*/
+-moz-box-shadow: none;
+-webkit-box-shadow: none;
+box-shadow: none;
+}
+
+/* Tweaks for Safari + Chrome. */
+@media (-webkit-min-device-pixel-ratio: 0) {
+  select {
+    background-image: url(../images/select_arrow.gif);
+    background-repeat: no-repeat;
+    background-position: right center;
+    padding-right: 20px;
+  }
+
+  select[size],
+  select[multiple] {
+    background-image: none;
+    padding: 0;
+  }
+
+  ::-webkit-validation-bubble-message {
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666), color-stop(1, #000));
+    border: $borders;
+    color: #fff;
+    font: $sans;
+    padding: 15px 15px 17px;
+    text-shadow: #000 0 0 1px;
+  }
+
+  ::-webkit-validation-bubble-top-outer-arrow,
+  ::-webkit-validation-bubble-top-inner-arrow {
+    display: none;
+  }
+}
+
+optgroup {
+  color: #000;
+  font-style: normal;
+  font-weight: normal;
+}
+
+button[type=submit], input[type='submit']{
+		padding:7px 12px;
+		text-align:center;
+		font-weight:bold;
+		@include rounded(5px);
+		@include gradient();
+		border:0;
+		color:#FFF;
 }
