--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,6 +13,7 @@ Gravityframework.com
 Version 1.2 
 Developed by: Owain Lewis
 License: MIT
+http://www.opensource.org/licenses/mit-license.php
 
 -------------------------------------------------------------- */
 html, body, div, span, object, iframe,
@@ -137,7 +138,7 @@ TYPOGRAPHY
 /* Default fonts and colors. */
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea {
   line-height: 1.5;
-  font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
+  font-family: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: black;
   font-size: 14px; }
 
@@ -148,7 +149,7 @@ HEADINGS
 -------------------------------------------------------------- */
 h1, h2, h3, h4, h5 {
   font-weight: bold;
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
 
 h1 {
   font-size: 30px; }
@@ -160,7 +161,7 @@ h3 {
   font-size: 24px; }
 
 h4 {
-  font-size: 205px; }
+  font-size: 20px; }
 
 h5 {
   font-size: 16px; }
@@ -275,6 +276,7 @@ GENERAL CLASSES
 .invisible {
   visibility: hidden; }
 
+@import url(helpers/_functions.css);
 /* --------------------------------------------------------------
 
 CSS GRID. www.owainlewis.com
@@ -367,34 +369,212 @@ CSS GRID. www.owainlewis.com
 
 /* --------------------------------------------------------------
 
-FORMS 
+Form Settings. 
+Most of this is inspired by the awesome work of Nathan Smith and formalize css!
 
 -------------------------------------------------------------- */
-*::-moz-focus-inner {
-  border: 0 none;
+::-moz-focus-inner {
+  border: 0;
   padding: 0; }
 
-form legend {
-  font-weight: bold;
-  display: block;
+input[type="search"]::-webkit-search-decoration {
+  display: none; }
+
+form {
   margin-bottom: 20px; }
 
-input, textarea {
-  padding: 5px;
-  display: block;
-  margin-bottom: 20px;
-  margin-left: 2px;
-  border: 1px solid #cccccc; }
+fieldset {
+  margin-bottom: 20px; }
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus {
+  border: 1px solid #aaa;
+  color: #444;
+  -moz-box-shadow: 0px 0 2px #0066ff;
+  -webkit-box-shadow: 0px 0 2px #0066ff;
+  box-shadow: 0px 0 2px #0066ff; }
 
 textarea {
+  min-height: 100px;
   resize: none;
-  min-height: 200px; }
+  overflow: auto;
+  width: 100%; }
 
-button:focus, button:active, input:focus, input:active, select:focus, select:active, textarea:focus, textarea:active {
-  -moz-box-shadow: 0 0 4px #0066ff;
-  -webkit-box-shadow: 0 0 4px #0066ff;
-  box-shadow: 0 0 4px #0066ff;
-  z-index: 1; }
+label,
+legend {
+  display: block;
+  font-weight: bold;
+  font-size: 13px; }
+
+select {
+  width: 100%; }
+
+input[type="checkbox"] {
+  display: inline; }
+
+label span,
+legend span {
+  font-weight: normal;
+  font-size: 13px;
+  color: #444; }
+
+input,
+button,
+select,
+textarea {
+  vertical-align: middle; }
+
+input[type="radio"],
+input[type="checkbox"] {
+  position: relative;
+  vertical-align: top;
+  top: 3px;
+  /* IE8, IE9, IE10 */
+  top: 0\0;
+  /* IE7 */
+  *top: -3px;
+  margin-right: 5px; }
+
+/* iPad */
+@media (-webkit-min-device-pixel-ratio: 1) and (max-device-width: 1024px) {
+  input[type="radio"],
+  input[type="checkbox"] {
+    vertical-align: baseline;
+    top: 2px; } }
+
+/* iPhone 3 */
+@media (-webkit-min-device-pixel-ratio: 1) and (max-device-width: 480px) {
+  input[type="radio"],
+  input[type="checkbox"] {
+    vertical-align: baseline;
+    top: 0; } }
+
+/* iPhone 4 */
+@media (-webkit-min-device-pixel-ratio: 2) and (max-device-width: 480px) {
+  input[type="radio"],
+  input[type="checkbox"] {
+    vertical-align: baseline;
+    top: 0; } }
+
+textarea,
+select,
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"] {
+  -webkit-appearance: none;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+  border: 1px solid #cccccc;
+  border-color: #cccccc #cccccc #cccccc;
+  color: black;
+  padding: 5px;
+  outline: none;
+  border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  font: 12px "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0 0 20px 0;
+  width: 100%;
+  display: block;
+  background-color: #fafafa;
+  background-image: -moz-linear-gradient(top, #fafafa, white);
+  /* FF3.6 */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fafafa), color-stop(1, white));
+  /* Saf4+, Chrome */
+  background-image: linear-gradient(top, #fafafa, white);
+  /* IE7 */
+  *padding-top: 2px;
+  *padding-bottom: 1px;
+  *height: auto; }
+
+/*
+Separate rule for Firefox.
+Separate rule for IE, too.
+Cannot stack with WebKit's.
+*/
+::-webkit-input-placeholder {
+  color: black; }
+
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: black; }
+
+:invalid {
+  /*
+  Suppress red glow that Firefox
+  adds to form fields by default,
+  even when user is still typing.
+  */
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
+/* Tweaks for Safari + Chrome. */
+@media (-webkit-min-device-pixel-ratio: 0) {
+  select {
+    background-image: url(../images/select_arrow.gif);
+    background-repeat: no-repeat;
+    background-position: right center;
+    padding-right: 20px; }
+
+  select[size],
+  select[multiple] {
+    background-image: none;
+    padding: 0; }
+
+  ::-webkit-validation-bubble-message {
+    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #666666), color-stop(1, black));
+    border: #cccccc;
+    color: #fff;
+    font: "Myriad Pro", Frutiger, Univers, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 15px 15px 17px;
+    text-shadow: #000 0 0 1px; }
+
+  ::-webkit-validation-bubble-top-outer-arrow,
+  ::-webkit-validation-bubble-top-inner-arrow {
+    display: none; } }
+
+optgroup {
+  color: #000;
+  font-style: normal;
+  font-weight: normal; }
+
+button[type=submit], input[type='submit'] {
+  padding: 7px 12px;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  background-color: #333333;
+  background-image: -moz-linear-gradient(top, #333333, #111111);
+  /* FF3.6 */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #333333), color-stop(1, #111111));
+  /* Saf4+, Chrome */
+  background-image: linear-gradient(top, #333333, #111111);
+  border: 0;
+  color: #FFF; }
 
 /* --------------------------------------------------------------
 
