--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -276,7 +276,6 @@ GENERAL CLASSES
 .invisible {
   visibility: hidden; }
 
-@import url(helpers/_functions.css);
 /* --------------------------------------------------------------
 
 CSS GRID. www.owainlewis.com
@@ -392,10 +391,7 @@ input[type="email"]:focus,
 input[type="tel"]:focus,
 textarea:focus {
   border: 1px solid #aaa;
-  color: #444;
-  -moz-box-shadow: 0px 0 2px #0066ff;
-  -webkit-box-shadow: 0px 0 2px #0066ff;
-  box-shadow: 0px 0 2px #0066ff; }
+  color: #444; }
 
 textarea {
   min-height: 100px;
