--- a/stylesheets/lib/_typography.scss
+++ b/stylesheets/lib/_typography.scss
@@ -24,19 +24,19 @@ h1,h2,h3,h4,h5 {
 }
 
 h1 {
-	font-size: 30px;;
+    font-size: $font-size * 2.1;
 }
 h2 {
-	font-size: 26px;
+    font-size: $font-size * 1.9 ;
 }
 h3 {
-	font-size: 24px;
+    font-size: $font-size * 1.7;
 }
 h4 {
-	font-size: 20px;
+    font-size: $font-size * 1.4;
 }
 h5 {
-	font-size: 16px;
+    font-size: $font-size * 1.2;
 }
 
 @import "_elements";
