--- a/stylesheets/lib/_typography.scss
+++ b/stylesheets/lib/_typography.scss
@@ -24,19 +24,19 @@ h1,h2,h3,h4,h5 {
 }
 
 h1 {
-    font-size: $font-size * 2.1;
+    font-size:24px;
 }
 h2 {
-    font-size: $font-size * 1.9;
+    font-size:20px;
 }
 h3 {
-    font-size: $font-size * 1.7;
+    font-size:16px;
 }
 h4 {
-    font-size: $font-size * 1.4;
+    font-size:14px;
 }
 h5 {
-    font-size: $font-size * 1.2;
+    font-size:14px;
 }
 
 @import "_elements";
