--- a/stylesheets/lib/_settings.scss
+++ b/stylesheets/lib/_settings.scss
@@ -1,16 +1,8 @@
 /* --------------------------------------------------------------
-                       _ _         
-                      (_) |        
-  __ _ _ __ __ ___   ___| |_ _   _ 
- / _` | '__/ _` \ \ / / | __| | | |
-| (_| | | | (_| |\ V /| | |_| |_| |
- \__, |_|  \__,_| \_/ |_|\__|\__, |
-  __/ |                       __/ |
- |___/                       |___/ 
 
-
-Gravityframework.com
-Version 1.2 
+Built with Gravity
+http://Gravityframework.com
+Version 1.3 
 Developed by: Owain Lewis
 License: MIT
 http://www.opensource.org/licenses/mit-license.php
@@ -41,7 +33,6 @@ $borders:#CCC;
 $headings: #333;
 
 //Default Colors
-
-$white:#FFF;
+$white:rgba(255);
 $grey: #666;
 $black: #000;
